[gd_scene load_steps=10 format=3 uid="uid://b627s6x0mwy07"]

[ext_resource type="Script" uid="uid://unqr5m2tt75a" path="res://scenes/quests/story_quests/marci/2_Sigilo/personajes/SecurityCamera.gd" id="1_mc2dk"]
[ext_resource type="Texture2D" uid="uid://dhs1rrgs40tcx" path="res://scenes/quests/story_quests/marci/assets/sprites/objetos/base camara.png" id="2_2mg04"]
[ext_resource type="Texture2D" uid="uid://bbsi1i1hihlx6" path="res://scenes/quests/story_quests/marci/assets/sprites/objetos/camara.png" id="3_eclmi"]
[ext_resource type="Material" uid="uid://64aeyjitacv3" path="res://scenes/game_elements/props/void/void_chromakey_material.tres" id="3_kfv3m"]
[ext_resource type="Texture2D" uid="uid://8t6ihmesvghq" path="res://scenes/game_elements/characters/enemies/guard/components/field_of_view.png" id="4_3r2jj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2mg04"]
atlas = ExtResource("3_eclmi")
region = Rect2(0, 0, 99, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_eclmi"]
atlas = ExtResource("3_eclmi")
region = Rect2(99, 0, 99, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ookm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mg04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eclmi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cv5dv"]
radius = 38.78913

[node name="SecurityCamera" type="Node2D"]
light_mask = 7
visibility_layer = 7
position = Vector2(0, -1)
script = ExtResource("1_mc2dk")
normal_color = Color(0, 0.8, 1, 0.3)
suspicious_color = Color(1, 0.8, 0, 0.5)
alert_color = Color(1, 0, 0, 0.7)
limit_start_angle = 45.0
limit_end_angle = 135.0
time_to_detect = 0.5
guard_alert_range = 2000.0

[node name="CameraBody" type="Sprite2D" parent="."]
rotation = 3.1363957
texture = ExtResource("2_2mg04")

[node name="AlertAudio" type="AudioStreamPlayer2D" parent="."]
max_distance = 1000.0
attenuation = 2.0
bus = &"SFX"

[node name="SuspiciousAudio" type="AudioStreamPlayer2D" parent="."]
max_distance = 1000.0
attenuation = 2.0
bus = &"SFX"

[node name="RotatingPart" type="Node2D" parent="."]
rotation = 0.7853982

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RotatingPart"]
sprite_frames = SubResource("SpriteFrames_7ookm")
autoplay = "default"

[node name="Light" type="PointLight2D" parent="RotatingPart"]
light_mask = 2
texture_filter = 6
texture_repeat = 2
material = ExtResource("3_kfv3m")
position = Vector2(123.602264, 16)
scale = Vector2(0.26425108, 0.08959937)
energy = 0.5
texture = ExtResource("4_3r2jj")

[node name="VisionArea" type="Area2D" parent="RotatingPart"]
position = Vector2(-2, 6)
scale = Vector2(6.451613, -5.1666665)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotatingPart/VisionArea"]
shape = SubResource("CircleShape2D_cv5dv")

[node name="DetectionRay" type="RayCast2D" parent="RotatingPart"]
exclude_parent = false
target_position = Vector2(248, 16)
